# xgb-ork

./: .gitignore  README.md  pyproject.toml
src/: app.py  testing.py
src/PROJECT-STORE/bar/: info.json
src/PROJECT-STORE/bar/config/: params.yaml
src/PROJECT-STORE/bar/models/: model1.json
src/PROJECT-STORE/foo/: info.json
src/PROJECT-STORE/foo/config/: params.yaml
src/PROJECT-STORE/foo/models/: model1.json
src/templates/c_template/: info.json
src/templates/c_template/config/: params.yaml
src/templates/r_template/: info.json
src/templates/r_template/config/: params.yaml
src/util/: DataStore.py  ModelInfo.py  Project.py  ProjectStore.py  types.py
src/xgb_ork.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
